[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openinference-instrumentation"
dynamic = ["version"]
description = "OpenInference instrumentation utilities"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8, <3.13"
authors = [
  { name = "OpenInference Authors", email = "oss@arize.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "opentelemetry-api",
  "openinference-semantic-conventions>=0.1.6",
]

[project.optional-dependencies]
test = [
  "opentelemetry-sdk",
]

[project.urls]
Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/openinference-instrumentation"

[tool.hatch.version]
path = "src/openinference/instrumentation/version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "src/openinference/instrumentation/*/*",
]

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/openinference"]
exclude = [
  "src/openinference/instrumentation/*/*",
]

[tool.mypy]
strict = true
explicit_package_bases = true
exclude = [
  "src/openinference/instrumentation/*/*",
]

[tool.ruff]
exclude= [
  "src/openinference/instrumentation/*/*",
]
line-length = 100
target-version = "py38"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "E501"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
force-single-line = false
