[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openinference-instrumentation-agent-framework"
dynamic = ["version"]
description = "OpenInference span processor for Microsoft Agent Framework - transforms native OpenTelemetry spans to OpenInference format"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10, <3.15"
authors = [
    { name = "OpenInference Authors", email = "oss@arize.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-semantic-conventions>=0.52b0",
    "openinference-semantic-conventions>=0.1.25",
    "typing-extensions",
]

[project.optional-dependencies]
instruments = [
    "agent-framework >= 1.0.0b260210",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-recording",
]

[project.urls]
Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-agent-framework"

[tool.hatch.version]
path = "src/openinference/instrumentation/agent_framework/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openinference"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "tests",
]

[tool.mypy]
strict = true
explicit_package_bases = true
exclude = [
    "examples",
    "dist",
    "sdist",
    "tests",
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "agent_framework.*",
    "openinference.instrumentation.agent_framework.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "E501"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
force-single-line = false
