[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openinference-instrumentation-dspy"
dynamic = ["version"]
description = "OpenInference DSPy Instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9, <3.13"
authors = [
  { name = "OpenInference Authors", email = "oss@arize.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "opentelemetry-api",
  "opentelemetry-instrumentation",
  "opentelemetry-semantic-conventions",
  "openinference-semantic-conventions",
  "wrapt",
  "typing-extensions",
]

[project.optional-dependencies]
instruments = [
  "dspy-ai >= 2.3.4",
]
test = [
  "dspy-ai==2.3.4",
  "google-generativeai",
  "opentelemetry-sdk",
  "responses",
  "respx==0.20.2",
]

[project.urls]
Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-dspy"

[tool.hatch.version]
path = "src/openinference/instrumentation/dspy/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openinference"]

[tool.mypy]
strict = true
explicit_package_bases = true
exclude = [
  "examples",
  "dist",
  "sdist",
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "wrapt",
  "dspy.*",
  "dsp.*",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "E501"]

[tool.ruff.lint]
ignore-init-module-imports = true
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
force-single-line = false
